hero-title and flex done

--- a/index.html
+++ b/index.html
@@ -13,15 +13,34 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="wrapper-left">
+      <div class="hero-title">
+        Get <span>insights</span> that help <br> your business grow.
+      </div>
 
-  Get insights that help your business grow.
+      <div class="body-copy">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.
+      </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+      <div class="metrics">
+        <div class="companies">
+          10k+ companies
+        </div>
+        <div class="templates">
+          314 templates
+        </div>
+        <div class="queries">
+          12m+ queries
+        </div>
+      </div>
+    </div>
+    <div class="wrapper-right">
+      <img src="./images/image-header-desktop.jpg" alt="people working on computers in office">
+    </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
