metrics area layed out

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
   <div class="container">
     <div class="wrapper-left">
       <div class="hero-title">
-        Get <span>insights</span> that help <br> your business grow.
+        Get <span class="insights">insights</span> that help <br> your business grow.
       </div>
 
       <div class="body-copy">
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        Discover the benefits of data analytics and make <br> better decisions regarding revenue, customer <br>
         experience, and overall efficiency.
       </div>
 
       <div class="metrics">
         <div class="companies">
-          10k+ companies
+          <strong>10k+</strong> <br> <span class="metrics-sub">companies</span>
         </div>
         <div class="templates">
-          314 templates
+          314 <br> <span class="metrics-sub">templates</span>
         </div>
         <div class="queries">
-          12m+ queries
+          12m+ <br> <span class="metrics-sub">queries</span>
         </div>
       </div>
     </div>
