how to overlay?

--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
 
       <div class="metrics">
         <div class="companies">
-          <strong>10k+</strong> <br> <span class="metrics-sub">companies</span>
+          <strong>10K+</strong> <br> <span class="metrics-sub">companies</span>
         </div>
         <div class="templates">
           314 <br> <span class="metrics-sub">templates</span>
         </div>
         <div class="queries">
-          12m+ <br> <span class="metrics-sub">queries</span>
+          12M+ <br> <span class="metrics-sub">queries</span>
         </div>
       </div>
     </div>
     <div class="wrapper-right">
-      
       <img src="./images/image-header-desktop.jpg" alt="people working on computers in office">
     </div>
-
   </div>
 
   <div class="attribution">
